# rust-gemm-bench

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs  rayon_matrix.rs  simple_matrix.rs  simple_matrix2.rs
