[package]
name = "rust-hello-world"
version = "0.1.0"
authors = ["Zakhar Koval <Zakhar.Koval@jetbrains.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
rand = "0.8.4"
rayon = "1.5.1"